--- a/main.html
+++ b/main.html
@@ -3,14 +3,21 @@
 <html>
 
 <head>
-	<link rel="stylesheet" href="styles.css">
+		<title>Shopping or Holoday</title>
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+		<ol>
+			<li data-ns-test="shoppingList">iphone</li>
+			<li data-ns-test="shoppingList">canon camera</li>
+			<li data-ns-test="shoppingList">cloths</li>
+		</ol>
 
+		<ul>
+			<li data-ns-test="holidayList">Maldives</li>
+			<li data-ns-test="holidayList">canada</li>
+			<li data-ns-test="holidayList">New Zealand</li>
+		</ul>
 </body>
 
 </html>
